# crudfull

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PYDANTIC_MIGRATION.md  README.md  architecture.html  cli-reference.html  main.py  mkdocs.yml  pyproject.toml  remove_bg.py  requirements.txt
.github/workflows/: docs.yml
assets/css/: style.css
assets/js/: main.js
crudfull/: __main__.py  cli.py
crudfull.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crudfull/templates/: test_resource.jinja2
crudfull/templates/auth/: dependencies.jinja2  models.jinja2  router.jinja2  schemas.jinja2  security.jinja2  service.jinja2  test_auth.jinja2
crudfull/templates/ghost/: conftest.jinja2  model.jinja2  repository.jinja2  router.jinja2  schemas.jinja2  service.jinja2  test_resource.jinja2
crudfull/templates/mongo/: conftest.jinja2  database_mongo_example.jinja2  model_mongo.jinja2  models.jinja2  repository.jinja2  router.jinja2  router_mongo.jinja2  schemas.jinja2  service.jinja2  service_mongo.jinja2  test_resource.jinja2
crudfull/templates/project/: conftest.jinja2  database_mongo.jinja2  database_sql.jinja2  docker_compose.jinja2  docker_compose_dev.jinja2  env.jinja2  env_dev.jinja2  env_example.jinja2  gitignore.jinja2  main.jinja2  readme.jinja2  requirements.jinja2  welcome.html.jinja2
crudfull/templates/sql/: conftest.jinja2  create_tables.jinja2  database_sql_example.jinja2  model_sql.jinja2  models.jinja2  repository.jinja2  router.jinja2  router_sql.jinja2  schemas.jinja2  service.jinja2  service_sql.jinja2  test_resource.jinja2
docs/: advanced.md  architecture.md  cli-reference.md  contributing.md  getting-started.md  index.md  installation.md
docs_html/: advanced.html  contributing.html  getting-started.html  index.html  installation.html
models/: user.py
routers/: user_router.py
scripts/: deploy_docs.sh  render_main_template.py  serve_docs.sh  serve_template.py
services/: user_service_ghost.py
site/: 404.html  index.html  sitemap.xml
site/advanced/: index.html
site/architecture/: index.html
site/cli-reference/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/installation/: index.html
site/search/: search_index.json
test_debug/: .gitignore  crudfull.json  requirements.txt
test_debug/app/: main.py
test_debug/app/db/: session.py
test_welcome/: .env.dev  crudfull.json  docker-compose.dev.yml  requirements.txt
test_welcome/app/: main.py  welcome.html
test_welcome/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
test_welcome/app/core/: security.py
test_welcome/app/db/: session.py
test_welcome/app/products/: models.py  router.py  schemas.py  service.py
test_welcome/tests/: conftest.py
test_welcome/tests/auth/: test_auth.py
test_welcome/tests/products/: test_products.py
