[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crudfull"
version = "0.1.0"
description = "Generador de CRUDs para FastAPI (work in progress)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Matias Vagliviello", email = "vaglimatias@gmail.com" }
]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.0.0",
  "typer[all]>=0.12.0",
  "Jinja2>=3.1.0",
  "python-dotenv>=1.0.0",
  "inflect>=7.0.0"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "httpx"
]


[project.scripts]
crudfull = "crudfull.cli:app"

[tool.setuptools.packages.find]
include = ["crudfull*"]
