[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crudfull"
version = "0.1.0"
description = "Generador de CRUDs para FastAPI (work in progress)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Matias Vagliviello", email = "vaglimatias@gmail.com" }
]
dependencies = [
    "typer",
    "jinja2",
    "inflect",
    "pydantic>=2.12.0",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "beanie",
    "motor",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4"
]

[project.optional-dependencies]
lite = [
    "typer",
    "jinja2",
    "inflect"
]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]
auth = [
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "pydantic[email]"
]


[project.scripts]
crudfull = "crudfull.cli:app"

[tool.setuptools.packages.find]
include = ["crudfull*"]
